[metadata]
name = psutil-exporter
description = Prometheus exporter using psutil
version = attr: psutil_exporter.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://github.com/osom8979/psutil-exporter
project_urls =
    GitHub: issues = https://github.com/osom8979/psutil-exporter/issues
    GitHub: repo = https://github.com/osom8979/psutil-exporter
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.12
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
psutil_exporter.assets = .gitignore

[options.entry_points]
console_scripts =
    psutil_exporter = psutil_exporter.entrypoint:main
